--- a/styles/_mainStyles.scss
+++ b/styles/_mainStyles.scss
@@ -81,7 +81,8 @@ h1 {
           align-items: center;
           flex-wrap: wrap;
 
-          .tag {}
+          .tag {
+          }
         }
       }
 
@@ -398,7 +399,7 @@ h1 {
       margin: 4rem auto 0px;
       font-family: "BPG Nino Mtavruli";
       font-weight: bold;
-      padding: 22px 40px;
+      padding: 21px 29px;
       cursor: pointer;
       opacity: 0.8;
 
