Feature/myProfile_passwordShow

--- a/css/global.css
+++ b/css/global.css
@@ -1550,6 +1550,14 @@ footer .div-2 p {
   background-color: #ffffff;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
+.mainRegistration .registration-container .register-form .eyeBtn {
+  width: 30px;
+  height: 20px;
+  margin: 15px 0px 0px -30px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #b2b2b2;
+}
 .mainRegistration .registration-container .register-form h3 {
   font-size: 20px;
   font-weight: bold;
@@ -1586,67 +1594,6 @@ footer .div-2 p {
   margin-bottom: 1rem;
   padding: 1rem;
   color: #483e3e;
-}
-.mainRegistration .registration-container .register-form .selectDiv {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  float: left;
-  width: 100%;
-}
-.mainRegistration .registration-container .register-form .selectDiv::after {
-  content: ">";
-  font: 17px "Consolas", monospace;
-  color: #707070;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-  right: 25%;
-  top: 14px;
-  padding: 5px;
-  border: 1px solid #707070;
-  border-radius: 4px;
-  position: absolute;
-  pointer-events: none;
-}
-.mainRegistration .registration-container .register-form .selectDiv::after:active {
-  content: ">";
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-.mainRegistration .registration-container .register-form .selectDiv .input-icons {
-  width: 350px;
-  display: flex;
-  position: relative;
-}
-.mainRegistration .registration-container .register-form .selectDiv .input-icons select {
-  width: 100%;
-  border: 1px solid #707070;
-  border-radius: 4px;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  margin: 0 auto 1 auto;
-  color: #483e3e;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  height: 50px;
-  margin: 5px 0px;
-  padding: 0px 25px;
-  background-color: #ffffff;
-  background-image: none;
-  -ms-word-break: normal;
-  word-break: normal;
-}
-.mainRegistration .registration-container .register-form .selectDiv .input-icons select option {
-  width: 100px;
-  font-weight: normal;
-  display: block;
-  white-space: nowrap;
-  min-height: 1.2em;
-  padding: 0px 2px 1px;
 }
 .mainRegistration .registration-container .register-form .agree-policies-wrapper {
   display: flex;
@@ -1707,7 +1654,7 @@ footer .div-2 p {
 .selectVisual .select-menu .menuVisual {
   border: 1px solid #707070;
   background-color: #fff;
-  padding: 20px;
+  padding: 1rem;
   color: #483e3e;
   font-weight: 500;
   border-radius: 6px;
@@ -1823,4 +1770,242 @@ footer .div-2 p {
 
 .successful-registration.active {
   display: block;
+}
+
+.myProfile {
+  min-height: calc(100vh - 187px);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+.myProfile h1 {
+  margin: 8rem auto 3rem auto;
+}
+.myProfile .my-profile {
+  margin-bottom: 3rem;
+  padding-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  width: 627px;
+  border-radius: 9px;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+.myProfile .my-profile h3 {
+  font-size: 20px;
+  font-weight: bold;
+  align-self: center;
+  margin-bottom: 1rem;
+  padding: 3rem 0rem;
+  font-family: "BPG Nino Mtavruli";
+}
+.myProfile .my-profile .options-wrapper,
+.myProfile .my-profile hr {
+  display: flex;
+  justify-content: space-between;
+  width: 74%;
+  margin: 0 auto;
+}
+.myProfile .my-profile .options-wrapper .profile-option,
+.myProfile .my-profile hr .profile-option {
+  font-size: 14px;
+  cursor: pointer;
+}
+.myProfile .my-profile .options-wrapper #profile-option-one,
+.myProfile .my-profile hr #profile-option-one {
+  color: black;
+  font-weight: bold;
+}
+.myProfile .my-profile .options-wrapper #profile-option-two,
+.myProfile .my-profile hr #profile-option-two {
+  color: #707070;
+}
+.myProfile .my-profile hr {
+  margin: 2rem auto 0 auto;
+}
+.myProfile .my-profile #my-profile-form {
+  display: flex;
+  flex-direction: column;
+}
+.myProfile .my-profile #postPassword {
+  display: none;
+  flex-direction: column;
+}
+.myProfile .my-profile form {
+  row-gap: 0.5rem;
+  margin-top: 50px;
+}
+.myProfile .my-profile form .msg-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+  width: 100%;
+}
+.myProfile .my-profile form .msg-wrapper label {
+  width: 50%;
+  display: flex;
+  padding-left: 22%;
+  color: #9191a0;
+  margin-bottom: 0;
+  font-size: 13px;
+  font-family: "BPG Nino Mtavruli";
+}
+.myProfile .my-profile form .input-icons input {
+  display: flex;
+  width: 350px;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  color: #483e3e;
+}
+.myProfile .my-profile form .agree-policies-wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+.myProfile .my-profile form .agree-policies-wrapper .policeDiv {
+  display: flex;
+  align-items: baseline;
+  width: 350px;
+}
+.myProfile .my-profile form .agree-policies-wrapper .policeDiv input {
+  display: flex;
+  align-self: center;
+}
+.myProfile .my-profile form .agree-policies-wrapper label {
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  margin-bottom: 0;
+}
+.myProfile .my-profile form .agree-policies-wrapper label span {
+  padding-left: 4px;
+  color: #3571a3;
+}
+.myProfile .my-profile-buttons {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 40px;
+}
+.myProfile .my-profile-buttons .cancel-button {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 18px;
+  border: none;
+  background: transparent;
+  width: auto;
+  padding: 0.8rem 0px;
+  cursor: pointer;
+  margin-right: 100px;
+}
+.myProfile .my-profile-buttons .enter {
+  background-color: #3571a3;
+  color: #ffffff;
+  font-size: 18px;
+  border: none;
+  border-radius: 9px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  width: auto;
+  margin-left: 50px;
+  padding: 0.8rem 1.8rem;
+  cursor: pointer;
+  font-family: "BPG Nino Mtavruli";
+  opacity: 0.8;
+}
+.myProfile .my-profile-buttons .enter:hover {
+  opacity: 1;
+}
+
+.selectVisual {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+}
+.selectVisual .select-menu {
+  width: 350px;
+  cursor: pointer;
+  position: relative;
+}
+.selectVisual .select-menu .menuVisual {
+  border: 1px solid #707070;
+  background-color: #fff;
+  padding: 1rem;
+  color: #483e3e;
+  font-weight: 500;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.borderVisual {
+  border: solid 1px #707070;
+}
+
+.optionVisual {
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 0 20px;
+  max-height: 180px;
+  overflow-y: auto;
+  transition: 0.4s linear 0.2s;
+  height: 0;
+  z-index: 5;
+}
+.optionVisual div {
+  padding: 8px 0;
+  font-weight: 500;
+  font-size: 14px;
+  transition: 0.3s ease-in-out;
+}
+
+.option:hover,
+.option.selected {
+  color: #3571a3;
+}
+
+.option:hover,
+.option.selected {
+  color: #3571a3;
+}
+
+.optionVisual::-webkit-scrollbar {
+  width: 7px;
+  background-color: #fff;
+}
+
+.optionVisual::-webkit-scrollbar-thumb {
+  height: 52px;
+  background-color: #efeff5;
+  border-radius: 10px;
+  border: 1px solid black;
+  border: 0.3px solid #707070;
+}
+
+.optionVisual.active {
+  height: 131px;
+}
+
+.input-icons {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+.input-icons .eyeBtn {
+  width: 30px;
+  height: 20px;
+  margin: 15px 0px 0px -30px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #b2b2b2;
 }/*# sourceMappingURL=global.css.map */
