--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,7 +6,6 @@
 @import "./aboutStyle";
 @import "./authStyles";
 @import "./header";
-@import "./not-foundStyles";
-@import "./contactStyles";
 @import "./footerStyles";
 @import "./registrationStyle";
+@import "./myProfile.scss";
