--- a/css/global.css
+++ b/css/global.css
@@ -1312,67 +1312,106 @@ h1 {
   border-top-color: #b2b2b2;
 }
 
-.about-contaioner {
+.aboutPage {
+  width: 89%;
+  margin: 0 auto;
+  font-family: "BPG Nino Mtavruli";
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  font-family: "DejaVu Sans";
+}
+@media (min-width: 1305px) {
+  .aboutPage {
+    width: 1210px;
+  }
+}
+.aboutPage .about-contaioner {
   margin-bottom: 3rem;
 }
-.about-contaioner .about-container-top-wrapper {
+.aboutPage .about-contaioner .about-container-top-wrapper {
   width: 100%;
-  height: 60vh;
+  height: auto;
 }
-.about-contaioner .about-container-top-wrapper .about-container-top {
-  height: 100%;
-  width: 85%;
-  margin: 5rem auto 0 auto;
+.aboutPage .about-contaioner .about-container-top-wrapper .about-container-top {
+  height: auto;
+  width: 100%;
+  margin: 10rem 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about h2 {
+.aboutPage .about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about h2 {
   font-size: 35px;
   font-family: "BPG Banner Caps";
   margin: 0 0 1.5rem 0;
 }
-.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about p {
+.aboutPage .about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about p {
   font-family: "DejaVu Sans";
   font-size: 18px;
   margin: 0 0 3rem 0;
 }
-.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-goal h2 {
+.aboutPage .about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-goal h2 {
   font-size: 35px;
   font-family: "BPG Banner Caps";
   margin: 0 0 1.5rem 0;
 }
-.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-goal p {
+.aboutPage .about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-goal p {
   font-family: "DejaVu Sans";
   font-size: 18px;
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom {
-  width: 85%;
-  margin: 0 auto;
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom {
+  width: 100%;
+  margin: 4rem auto;
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom h2 {
-  padding: 3rem 0 5rem 0;
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom h2 {
+  margin: 1rem 0 5rem 0;
   font-size: 35px;
   font-family: "BPG Banner Caps";
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info {
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info {
   min-height: 70vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 2rem;
+  grid-gap: 8rem;
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info {
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info {
+  display: flex;
+  flex-direction: column;
+  width: 285px;
+  height: 185px;
+}
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info h4 {
   width: 100%;
-  height: 100%;
+  min-height: 80px;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  align-items: center;
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info h4 {
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info p {
+  width: 100%;
+  min-height: 50px;
+  display: flex;
+  justify-content: center;
+}
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info .linkProfile {
+  display: flex;
+  justify-content: center;
+}
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info .linkProfile img {
+  margin: 0px 10px;
+  width: 24px;
+  height: 24px;
+}
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info h4 {
   font-family: "DejaVu Sans";
   font-size: 24px;
 }
-.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info p {
+.aboutPage .about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info p {
   font-family: "DejaVu Sans";
   font-size: 18px;
-  margin: 1rem 0 0 0;
 }
 
 .initionDecoration {
