--- a/styles/_footerStyles.scss
+++ b/styles/_footerStyles.scss
@@ -13,6 +13,7 @@ footer {
 
     .copyRightLink {
       margin-top: 25px;
+      max-width: 280px;
 
       .privacy {
         text-decoration: none;
