--- a/styles/_registrationStyle.scss
+++ b/styles/_registrationStyle.scss
@@ -3,6 +3,7 @@
   display: flex;
 }
 .mainRegistration {
+  min-height: 100vh;
   .registration-container {
     margin: 0 auto 3rem auto;
     display: flex;
